applications/jenkins/jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  namespace: jenkins-ns
  labels:
    app: jenkins
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 32000
    protocol: TCP
    name: http
  - port: 50000
    targetPort: 50000
    nodePort: 32001
    protocol: TCP
    name: jnlp
  selector:
    app: jenkins
